<resources>
    <string name="app_name">Каталог дверей</string>
    <string name="wood_door">Межкомнатные двери</string>
    <string name="metal_door">Входные двери</string>
    <string name="we_on_map">Мы на карте</string>
    <string name="about_us">О нас</string>
    <string name="error_internet_not_available">Интернет недоступен</string>
    <string name="error_server_not_available">Сервер недоступен\nПроверьте соединение с интернетом</string>
    <string name="error_server">Серверная ошибка\nПожалуйста, попробуйте позже</string>
    <string name="error">Непредвиденная ошибка</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>
    <string name="something_wrong">Что-то пошло не так\nПожалуйста, попробуйте позже</string>
    <string name="try_again">Попробовать еще раз</string>
    <string name="sad_face">Грустное лицо</string>
    <string name="door_image">Изображение двери</string>
    <string name="title_activity_maps">Карта</string>
    <string name="shop_address">Адрес: Минская область, г.Мядель, \nул. Интернациональная, д. 11</string>
    <string name="working_hours">Время работы:</string>
    <string name="open_hours">Вт – Пт: 10:00 – 18:00\nСб: 9:00 – 14:00</string>
    <string name="day_off">Вс, Пн - выходной</string>
    <string name="phone">Телефоны:</string>
    <string name="mts_number">MTC: +375336339291</string>
    <string name="velcom_number">Velcom: +375296798750</string>
    <string name="icons8">App icons by icons8</string>
    <string name="search">Найти</string>
    <string name="no_data_requested">По вашему запросу ничего не найдено</string>
</resources>
