<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ru.mail1998.logunov.maxim.doors.presentation.screens.info.InfoViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        style="@style/AppConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            style="@style/AppToolBar"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:id="@+id/textView3"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_address"
            app:layout_constraintTop_toBottomOf="@id/toolBar" />

        <TextView
            android:id="@+id/textView4"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/working_hours"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_hours"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/InfoTextView"
            android:text="@string/day_off"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            style="@style/InfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <TextView
            style="@style/InfoClickTextView"
            android:onClick="@{() -> viewModel.onMtsNumberClick()}"
            android:text="@string/mts_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            style="@style/InfoClickTextView"
            android:onClick="@{() -> viewModel.onVelcomNumberClick()}"
            android:text="@string/velcom_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            style="@style/InfoClickTextView"
            android:onClick="@{() -> viewModel.onLinkClick()}"
            android:text="@string/icons8"
            app:layout_constraintBottom_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>