<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ru.mail1998.logunov.maxim.doors.presentation.screens.main.MainActivityViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        style="@style/AppConstraintLayout">

        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
            android:id="@+id/wood_doors"
            style="@style/MainScreenTextView"
            android:clickable="true"
            android:drawableStart="@drawable/wood_door"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onWoodDoorClick()}"
            android:text="@string/wood_door"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/wood_doors" />

        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
            android:id="@+id/metal_doors"
            style="@style/MainScreenTextView"
            android:drawableStart="@drawable/metal_door"
            android:onClick="@{() -> viewModel.onMetalDoorClick()}"
            android:text="@string/metal_door"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/metal_doors" />

        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
            android:id="@+id/map"
            style="@style/MainScreenTextView"
            android:drawableStart="@drawable/map"
            android:onClick="@{() -> viewModel.onMapClick()}"
            android:text="@string/we_on_map"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
            android:id="@+id/about_us"
            style="@style/MainScreenTextView"
            android:drawableStart="@drawable/info"
            android:onClick="@{() -> viewModel.onInfoClick()}"
            android:text="@string/about_us"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

    </android.support.constraint.ConstraintLayout>


</layout>