<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ru.mail1998.logunov.maxim.doors.presentation.screens.main.MainActivityViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout style="@style/AppConstraintLayout">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/tool_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                style="@style/AppToolBar"
                app:titleTextColor="@android:color/white"
                app:layout_scrollFlags="scroll|snap"/>
        </android.support.design.widget.AppBarLayout>

        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
            android:id="@+id/wood_doors"
            style="@style/MainScreenTextView"
            android:drawableStart="@drawable/wood_door"
            android:onClick="@{() -> viewModel.onWoodDoorClick()}"
            android:text="@string/wood_door"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar_container" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/wood_doors" />

        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
            android:id="@+id/metal_doors"
            style="@style/MainScreenTextView"
            android:drawableStart="@drawable/metal_door"
            android:onClick="@{() -> viewModel.onMetalDoorClick()}"
            android:text="@string/metal_door"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/metal_doors" />

        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
            android:id="@+id/map"
            style="@style/MainScreenTextView"
            android:drawableStart="@drawable/map"
            android:onClick="@{() -> viewModel.onMapClick()}"
            android:text="@string/we_on_map"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
            android:id="@+id/about_us"
            style="@style/MainScreenTextView"
            android:drawableStart="@drawable/info"
            android:onClick="@{() -> viewModel.onInfoClick()}"
            android:text="@string/about_us"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

    </android.support.constraint.ConstraintLayout>
</layout>